--- a/ScreenDimmer/ScreenDimmer.csproj
+++ b/ScreenDimmer/ScreenDimmer.csproj
@@ -54,9 +54,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Defaults.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Defaults.cs" />
     <Compile Include="SettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,9 +63,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SetttingsFormCore.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="CoreLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="OverlayForm.resx">
