made OverlayForm and FormManager not appear in alt tab menu, made SettingsForm only visible in alt tab menu when not minimized to tray.

--- a/ScreenDimmer/ScreenDimmer.csproj
+++ b/ScreenDimmer/ScreenDimmer.csproj
@@ -84,6 +84,9 @@
     <Compile Include="CoreLogic.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FormManager.resx">
+      <DependentUpon>FormManager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="OverlayForm.resx">
       <DependentUpon>OverlayForm.cs</DependentUpon>
     </EmbeddedResource>
