--- a/ScreenDimmer/ScreenDimmer.csproj
+++ b/ScreenDimmer/ScreenDimmer.csproj
@@ -49,7 +49,7 @@
     <StartupObject>ScreenDimmer.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>ScreenDimmerIcon.ico</ApplicationIcon>
+    <ApplicationIcon>ScreenDimmerIcon_Black.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -118,6 +118,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ScreenDimmerIcon.ico" />
+    <Content Include="ScreenDimmerIcon_Black.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
