--- a/ScreenDimmer/packages.config
+++ b/ScreenDimmer/packages.config
@@ -3,6 +3,8 @@
   <package id="Angle" version="3.3.0" targetFramework="net48" />
   <package id="Costura.Fody" version="5.7.0" targetFramework="net48" developmentDependency="true" />
   <package id="Fody" version="6.5.5" targetFramework="net48" developmentDependency="true" />
+  <package id="Magick.NET.Core" version="13.6.0" targetFramework="net48" />
+  <package id="Magick.NET-Q8-AnyCPU" version="13.6.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
